added jquery ui

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,14 +1,3 @@
 <div id="board">
-	<% @project.cards.each do |card| %>
-
-		<div class="card">
-			<div class="header">
-				<span class="nav"><%= link_to "X", project_card_path(@project, id: card.id), data:{confirm: "Are you sure?"}, method: :delete, class: "delete-card", remote: true %></span>
-				<h3><%= card.title %></h3>
-			</div>
-			<p><%= card.body %></p>
-			
-		</div>
-
-	<% end %>
+	<%= render partial: 'shared/card', collection: @project.cards %>
 </div>
