--- a/app/views/cards/destroy.js.erb
+++ b/app/views/cards/destroy.js.erb
@@ -1,3 +1,3 @@
 $(".delete-card").on("ajax:complete", function(){
-	$(this).closest('.card').fadeOut(1000)
-})
+	$(this).closest('.card').fadeOut(1000);
+});
